merged with trunk adapted SugarJ to the new Spoofax terms
git-svn-id: https://svn.strategoxt.org/repos/StrategoXT/sugarj/branches/SugarJ-editor-services@21859 ba653a0a-7fb7-0310-a048-973b18a224e4